# lean4_lambda_calculator

./: .env.example  .gitignore  PropLemmas.txt  README.md  SimpLeammas.txt  SimpLemmas.lean  history.txt  pyproject.toml  query_const.lean  query_const2.lean  script.txt  test_calculator.py
.github/workflows/: update-pip-package.yml
lean4_lambda_calculator/: Context.py  QueryConst.lean  QueryDeps.lean  calculator.py  calculator2.py  expr.py  level.py  parser.py  parser2.py  python_lsp.py  query_consts.py  shell.py  split.py
lean4_lambda_calculator/tests/: test_calculator.py  test_parser.py
tests/: test_calculator.py  test_expr.py  test_level.py
